--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-lg-10 m-5">
               <h1 class="">Healthy, Delicious Meals Delivered to Your Door – Ready in Minutes!</h1>
               <p>With Daily Dish, you can enjoy chef-crafted, wholesome meals without the hassle of meal prep, grocery shopping, or cleanup.</p>
-              <a href="#" ><button class="btn btn-primary">Get Started Today and Save Time!</button></a>
+              <a href="#" ><button class="btn btn-primary" id="Button">Get Started Today and Save Time!</button></a>
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@
               <p>Our easy-to-follow recipes mean you’ll have a mouthwatering, home-cooked meal ready in under 30 minutes—no kitchen skills required!</p>
             </div>
           </div>
-          <a href="#"><button class="btn btn-primary mt-5">Pick Your Plan</button></a>
+          <a href="#"><button class="btn btn-primary mt-5" id="Button">Pick Your Plan</button></a>
         </div>
       </section>
       <hr> </hr>
@@ -210,7 +210,7 @@
         <div class="container-lg pt-5">
           <div class="row d-flex justify-content-center text-center align-content-center col-lg-12 text-light">
             <h2 class="p-3">Join Thousands of Time-Savers – Start Eating Better Today!</h2>
-            <a href="#"><button class="btn btn-primary">Sign Up and Get 30% Off Your First Week</button></a>
+            <a href="#"><button class="btn btn-primary" id="Button">Sign Up and Get 30% Off Your First Week</button></a>
           </div>
         </div>
       </section>
