fixed Health section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
       <section id="hero">
         <div class="container-lg pt-5 "> 
-          <div class="container-lg row d-flex justify-content-center text-center p-5 m-5">
+          <div class="container-lg row d-flex justify-content-center text-center p-5">
             <div class="col-lg-10 m-5">
               <h1 class="">Healthy, Delicious Meals Delivered to Your Door – Ready in Minutes!</h1>
               <p>With Daily Dish, you can enjoy chef-crafted, wholesome meals without the hassle of meal prep, grocery shopping, or cleanup.</p>
@@ -84,15 +84,15 @@
         </div>
       </section>
       <hr> </hr>
-      <section id="Ealthy">
+      <section id="Healthy">
         <div class="container-lg">
           <h2 class="text-center pb-5">The Smarter Way to Eat Healthy</h2>
-          <div class="d-flex justify-content-center align-content-center">
-            <div class=>
-              <img class="img-fluid" src="images/family-eating.png" alt="Family enjoying dinner" width="825">
+          <div class="row justify-content-center align-content-center">
+            <div class="col-sm-12 col-md-6 order-sm-2 order-md-1">
+              <img class="img-fluid" src="images/family-eating.png" alt="Family enjoying dinner">
             </div>
-            <div class=>
-              <ul id="List" class="my-5 ps-3">
+            <div class="col-sm-12 col-md-6 order-sm-1 order-md-2">
+              <ul id="List" class="my-xl-4 my-xxl-5 ps-3">
                 <li class="border-bottom py-2">
                   <h3>Save Time & Stress</h3>
                   <p>Skip the grocery store and meal prep. Everything you need is delivered—so you can focus on living, not planning.</p>
